--- a/Nethereum.UI/Nethereum.UI.iOS/packages.config
+++ b/Nethereum.UI/Nethereum.UI.iOS/packages.config
@@ -5,6 +5,9 @@
   <package id="MvvmCross.Core" version="4.1.0" targetFramework="xamarinios10" />
   <package id="MvvmCross.Forms.Presenter" version="4.1.0" targetFramework="xamarinios10" />
   <package id="MvvmCross.Platform" version="4.1.0" targetFramework="xamarinios10" />
+  <package id="Nethereum.Portable" version="1.0.0-rc2" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="xamarinios10" />
+  <package id="Portable.BouncyCastle" version="1.8.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.4.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="xamarinios10" />
 </packages>
