--- a/Nethereum.UI/Nethereum.Wallet/packages.config
+++ b/Nethereum.UI/Nethereum.Wallet/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Nethereum.Portable" version="1.0.0-rc1" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Nethereum.Portable" version="1.0.0-rc2" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Portable.BouncyCastle" version="1.8.1" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
