--- a/Nethereum.UI/Nethereum.UI.UWP/Nethereum.UI.UWP.csproj
+++ b/Nethereum.UI/Nethereum.UI.UWP/Nethereum.UI.UWP.csproj
@@ -113,8 +113,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="about.png" />
+    <Content Include="augurIcon.png" />
     <Content Include="blog.png" />
+    <Content Include="digixIcon.png" />
     <Content Include="ethIcon.png" />
+    <Content Include="firstbloodIcon.png" />
+    <Content Include="golemIcon.PNG" />
     <Content Include="icon.png" />
     <Content Include="icon_wb.png" />
     <Content Include="makerIcon.png" />
@@ -127,6 +131,7 @@
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="refresh.png" />
+    <Content Include="singularDTVIcon.PNG" />
     <Content Include="slideout.png" />
   </ItemGroup>
   <ItemGroup>
