--- a/Nethereum.UI/Nethereum.UI.UWP/project.json
+++ b/Nethereum.UI/Nethereum.UI.UWP/project.json
@@ -1,13 +1,13 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "MvvmCross": "4.1.0",
-    "MvvmCross.Core": "4.1.0",
-    "MvvmCross.Forms.Presenter": "4.1.0",
-    "MvvmCross.Plugin.Messenger": "4.1.0",
-    "Nethereum.Portable": "1.0.0-rc1",
-    "Xam.Plugins.Forms.ImageCircle": "1.4.1",
-    "Xamarin.Forms": "2.1.0.6529"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "MvvmCross": "4.4.0",
+    "MvvmCross.Core": "4.4.0",
+    "MvvmCross.Forms.Presenter": "4.4.0",
+    "MvvmCross.Plugin.Messenger": "4.4.0",
+    "Nethereum.Portable": "1.0.5",
+    "Xam.Plugins.Forms.ImageCircle": "1.8.1",
+    "Xamarin.Forms": "2.3.4.184-pre1"
   },
   "frameworks": {
     "uap10.0": {}
