--- a/Nethereum.UI/Nethereum.UI.iOS/packages.config
+++ b/Nethereum.UI/Nethereum.UI.iOS/packages.config
@@ -1,14 +1,61 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MvvmCross" version="4.1.6" targetFramework="xamarinios10" />
-  <package id="MvvmCross.Binding" version="4.1.6" targetFramework="xamarinios10" />
-  <package id="MvvmCross.Core" version="4.1.6" targetFramework="xamarinios10" />
-  <package id="MvvmCross.Forms.Presenter" version="4.1.4" targetFramework="xamarinios10" />
-  <package id="MvvmCross.Platform" version="4.1.6" targetFramework="xamarinios10" />
-  <package id="MvvmCross.Plugin.Messenger" version="4.1.6" targetFramework="xamarinios10" />
-  <package id="Nethereum.Portable" version="1.0.0-rc2" targetFramework="xamarinios10" />
-  <package id="Newtonsoft.Json" version="9.0.1-beta1" targetFramework="xamarinios10" />
-  <package id="Portable.BouncyCastle" version="1.8.1" targetFramework="xamarinios10" />
-  <package id="Xam.Plugins.Forms.ImageCircle" version="1.4.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.3.0.46-pre3" targetFramework="xamarinios10" />
+  <package id="EdjCase.JsonRpc.Client" version="1.0.5" targetFramework="xamarinios10" />
+  <package id="EdjCase.JsonRpc.Core" version="1.0.4" targetFramework="xamarinios10" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Binding" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Core" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Forms.Presenter" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Platform" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="MvvmCross.Plugin.Messenger" version="4.4.0" targetFramework="xamarinios10" />
+  <package id="Nethereum.Portable" version="1.0.5" targetFramework="xamarinios10" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
+  <package id="Portable.BouncyCastle" version="1.8.1.1" targetFramework="xamarinios10" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.3.4.184-pre1" targetFramework="xamarinios10" />
 </packages>
