--- a/Nethereum.UI/Nethereum.UI.Droid/Properties/AndroidManifest.xml
+++ b/Nethereum.UI/Nethereum.UI.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Nethereum.UI.Droid" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="23" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<access origin="*" />
 	<application android:label="Nethereum Wallet" android:theme="@style/MyTheme"></application>
 </manifest>
