--- a/Nethereum.UI/Nethereum.UI.Droid/packages.config
+++ b/Nethereum.UI/Nethereum.UI.Droid/packages.config
@@ -1,22 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EdjCase.JsonRpc.Client" version="1.0.5" targetFramework="monoandroid60" />
-  <package id="EdjCase.JsonRpc.Core" version="1.0.4" targetFramework="monoandroid60" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid60" />
+  <package id="EdjCase.JsonRpc.Client" version="1.3.1" targetFramework="monoandroid60" />
+  <package id="EdjCase.JsonRpc.Core" version="1.3.1" targetFramework="monoandroid60" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid60" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="MvvmCross" version="4.4.0" targetFramework="monoandroid60" />
-  <package id="MvvmCross.Binding" version="4.4.0" targetFramework="monoandroid60" />
-  <package id="MvvmCross.Core" version="4.4.0" targetFramework="monoandroid60" />
-  <package id="MvvmCross.Forms.Presenter" version="4.4.0" targetFramework="monoandroid60" />
-  <package id="MvvmCross.Platform" version="4.4.0" targetFramework="monoandroid60" />
-  <package id="MvvmCross.Plugin.Messenger" version="4.4.0" targetFramework="monoandroid60" />
-  <package id="Nethereum.Portable" version="1.0.5" targetFramework="monoandroid60" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid60" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
+  <package id="MvvmCross" version="5.0.2" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Binding" version="5.0.2" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Core" version="5.0.2" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Forms" version="5.0.2" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Platform" version="5.0.2" targetFramework="monoandroid71" />
+  <package id="MvvmCross.Plugin.Messenger" version="5.0.2" targetFramework="monoandroid71" />
+  <package id="Nethereum.ABI" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.Contracts" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.Hex" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.JsonRpc.Client" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.JsonRpc.RpcClient" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.KeyStore" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.RLP" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.RPC" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.Signer" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.StandardTokenEIP20" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.Util" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Nethereum.Web3" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid60" />
   <package id="Portable.BouncyCastle" version="1.8.1.1" targetFramework="monoandroid60" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Console" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid60" />
@@ -30,7 +43,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid60" />
@@ -44,6 +57,8 @@
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid60" />
@@ -56,14 +71,15 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
-  <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="monoandroid60" />
 </packages>
