--- a/Nethereum.UI/Nethereum.UI.Droid/packages.config
+++ b/Nethereum.UI/Nethereum.UI.Droid/packages.config
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="MvvmCross" version="5.0.2" targetFramework="monoandroid71" />
-  <package id="MvvmCross.Binding" version="5.0.2" targetFramework="monoandroid71" />
-  <package id="MvvmCross.Core" version="5.0.2" targetFramework="monoandroid71" />
-  <package id="MvvmCross.Forms" version="5.0.2" targetFramework="monoandroid71" />
-  <package id="MvvmCross.Platform" version="5.0.2" targetFramework="monoandroid71" />
-  <package id="MvvmCross.Plugin.Messenger" version="5.0.2" targetFramework="monoandroid71" />
+  <package id="MvvmCross" version="6.0.1" targetFramework="monoandroid81" />
+  <package id="MvvmCross.Droid.Support.Core.UI" version="6.0.1" targetFramework="monoandroid81" />
+  <package id="MvvmCross.Droid.Support.Design" version="6.0.1" targetFramework="monoandroid81" />
+  <package id="MvvmCross.Droid.Support.Fragment" version="6.0.1" targetFramework="monoandroid81" />
+  <package id="MvvmCross.Droid.Support.V7.AppCompat" version="6.0.1" targetFramework="monoandroid81" />
+  <package id="MvvmCross.Forms" version="6.0.1" targetFramework="monoandroid81" />
+  <package id="MvvmCross.Plugin.Messenger" version="6.0.1" targetFramework="monoandroid81" />
   <package id="Nethereum.ABI" version="2.5.1" targetFramework="monoandroid71" />
   <package id="Nethereum.Accounts" version="2.5.1" targetFramework="monoandroid71" />
   <package id="Nethereum.Contracts" version="2.5.1" targetFramework="monoandroid71" />
@@ -30,7 +31,7 @@
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="System.Console" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Console" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="monoandroid60" />
@@ -59,35 +60,39 @@
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="monoandroid60" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.UI" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Design" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Fragment" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Transition" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v4" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Forms.ImageCircle" version="3.0.0.5" targetFramework="monoandroid71" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Annotations" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Compat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.UI" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Design" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Fragment" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Transition" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v4" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="monoandroid81" />
   <package id="Xamarin.Forms" version="3.1.0.530888-pre2" targetFramework="monoandroid71" />
 </packages>
