--- a/Nethereum.UI/Nethereum.UI.UWP/Nethereum.UI.UWP.csproj
+++ b/Nethereum.UI/Nethereum.UI.UWP/Nethereum.UI.UWP.csproj
@@ -116,6 +116,7 @@
     <Content Include="icon.png" />
     <Content Include="icon_wb.png" />
     <Content Include="makerIcon.png" />
+    <Content Include="plus.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -125,6 +126,7 @@
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="refresh.png" />
+    <Content Include="save.png" />
     <Content Include="singularDTVIcon.PNG" />
     <Content Include="slideout.png" />
   </ItemGroup>
