--- a/Nethereum.UI/Nethereum.Wallet/Nethereum.Wallet.csproj
+++ b/Nethereum.UI/Nethereum.Wallet/Nethereum.Wallet.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Nethereum.StandardTokenEIP20" Version="2.5.1" />
     <PackageReference Include="Nethereum.Web3" Version="2.5.1" />
+    <PackageReference Include="ReactiveUI" Version="8.2.1" />
   </ItemGroup>
 
 </Project>
